bk_ida/gobmkida/c1/owl_defend
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_defend/src/engine/owl.c:2252:12: error: use of undeclared identifier 'owl_defend_owl'; did you mean 'owl_defend'?
init_owl( &owl_defend_owl, target, 0, 0, 1); 
           ^~~~~~~~~~~~~~
           owl_defend
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_defend/src/engine/owl.c:2218:6: note: 'owl_defend' declared here
int  owl_defend( int target, int *defense_point, int *certain, int *kworm) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_defend/src/engine/owl.c:2253:19: error: use of undeclared identifier 'owl_defend_owl'; did you mean 'owl_defend'?
owl_make_domains( owl_defend_owl, 0LL); 
                  ^~~~~~~~~~~~~~
                  owl_defend
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_defend/src/engine/owl.c:2218:6: note: 'owl_defend' declared here
int  owl_defend( int target, int *defense_point, int *certain, int *kworm) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_defend/src/engine/owl.c:2254:28: error: use of undeclared identifier 'owl_defend_owl'; did you mean 'owl_defend'?
prepare_goal_list( target, owl_defend_owl, kworm, ( int *)1, v8, v9); 
                           ^~~~~~~~~~~~~~
                           owl_defend
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_defend/src/engine/owl.c:2218:6: note: 'owl_defend' declared here
int  owl_defend( int target, int *defense_point, int *certain, int *kworm) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_defend/src/engine/owl.c:2255:44: error: use of undeclared identifier 'owl_defend_owl'; did you mean 'owl_defend'?
v15 = do_owl_defend( target, &v16, wormid, owl_defend_owl, 0, 0, 0); 
                                           ^~~~~~~~~~~~~~
                                           owl_defend
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_defend/src/engine/owl.c:2218:6: note: 'owl_defend' declared here
int  owl_defend( int target, int *defense_point, int *certain, int *kworm) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_defend/src/engine/owl.c:2276:1: error: use of undeclared identifier 'owl_defend_owl'
owl_defend_owl->goal, 
^
5 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_defend/src/obj/1/owl.o] Error 1
